<resources>
    <string name="app_name">Shopping Cart</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="start">Start</string>
    <string name="productimage">productImage</string>
    <string name="productname">ProductName</string>
    <string name="price">200 Egp</string>
    <string name="product_name">Soya Milk</string>
    <string name="product_weight">210 gm</string>
    <string name="cart_product_image">cart_product_image</string>
    <string name="number_of_units">2</string>
    <string name="product_price">50 EGP</string>
    <string name="deals_for_you">Deals For You</string>
    <string name="market_map">market map</string>
    <string name="total">Total:</string>
    <string name="proceed">Proceed</string>
    <string name="_300">300</string>
    <string name="egp"> EGP</string>
    <string name="imageforqr">imageforQr</string>
    <string name="total_price">Total Price</string>

    <string-array name="sections">
        <item>SeaFood,Meat,Bulk</item>
        <item>Dairy,eggs,Cheese</item>
        <item>Bakery,PreparedFood</item>
        <item>Frozen</item>
        <item>Grocery</item> ,
        <item>Florist</item>\
    </string-array>
</resources>